--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,11 @@
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
+	* LINGUAS: Added `ko'.
 	* LINGUAS: Added `uk'.
 
 2006-04-22  Daichi Kawahata <daichi@xfce.org>
 
-	* zh_CN.po: Updated Simplified Chinese by Jick Nan
+	* zh_CN.po: Updated Simplified Chinese translations by Jick Nan
 	<jick.nan@gmail.com>.
 
 2006-04-15  Daichi Kawahata <daichi@xfce.org>
