--- a/po/hu.po
+++ b/po/hu.po
@@ -4,14 +4,15 @@
 # SZERVÁC Attila <sas@321.hu>, 2005.
 #   based on Leafpad translation by
 #   Reviczky Ádám János <reviczky@freemail.hu>, 2004.
+# Andras Mohari <mayday@mailpont.hu>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Mousepad 0.2.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-17 11:28+0200\n"
-"PO-Revision-Date: 2006-04-19 18:30+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-04-23 16:17+0100\n"
+"Last-Translator: Andras Mohari <mayday@mailpont.hu>\n"
 "Language-Team: Hungarian <translation-team-hu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,38 +21,38 @@ msgstr ""
 #: ../src/callback.c:34
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Mented az alábbi változásait?: '%s'"
+msgstr "Mented \"%s\" változásait?"
 
 #: ../src/callback.c:180
 #: ../src/file.c:150
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "A kódkészlet nem váltható erre: '%s'"
+msgstr "A kódolás nem alakítható át erre: \"%s\""
 
 #: ../src/callback.c:207
 msgid "Can't open pipe to process"
-msgstr "Sikertelen pipanyitás a művelethez"
+msgstr "Nem nyitható pipe a processzhez"
 
 #: ../src/callback.c:366
 msgid "A text editor for Xfce"
-msgstr "Egyszerű Xfce szövegszerkesztő"
+msgstr "Egyszerű szövegszerkesztő Xfce-hez"
 
 #: ../src/dialog.c:135
 #, c-format
 msgid "About %s"
-msgstr "%s névjegy"
+msgstr "%s névjegye"
 
 #: ../src/file.c:163
 msgid "Can't open file to write"
-msgstr "Nem lehet írásra megnyitni a fájlt"
+msgstr "Nem nyitható meg írásra a fájl"
 
 #: ../src/file.c:168
 msgid "Can't write file"
-msgstr "Nem lehet írni a fájlt"
+msgstr "Nem írható a fájl"
 
 #: ../src/font.c:49
 msgid "Font"
-msgstr "Betű"
+msgstr "Betűtípus"
 
 #: ../src/menu.c:60
 msgid "/_File"
@@ -59,37 +60,37 @@ msgstr "/_Fájl"
 
 #: ../src/menu.c:62
 msgid "/File/_New"
-msgstr "/Fájl/_Új"
+msgstr "/Fájl/Ú_j"
 
 #. { N_("/File/New _Window"), "<shift><control>N",
 #. G_CALLBACK(cb_file_new), 1 },
 #: ../src/menu.c:66
 msgid "/File/_Open..."
-msgstr "/Fájl/Meg_nyit"
+msgstr "/Fájl/_Megnyitás"
 
 #: ../src/menu.c:68
 msgid "/File/_Save"
-msgstr "/Fájl/_Ment"
+msgstr "/Fájl/M_entés"
 
 #: ../src/menu.c:70
 msgid "/File/Save _As..."
-msgstr "/Fájl/Ment má_sként..."
+msgstr "/Fájl/Men_tés másként..."
 
 #: ../src/menu.c:72
 msgid "/File/_Print..."
-msgstr "/Fájl/N_yomtat..."
+msgstr "/Fájl/_Nyomtatás..."
 
 #: ../src/menu.c:76
 msgid "/File/_Quit"
-msgstr "/Fájl/_Kilép"
+msgstr "/Fájl/_Kilépés"
 
 #: ../src/menu.c:78
 msgid "/_Edit"
-msgstr "Sz_erkesztés"
+msgstr "S_zerkesztés"
 
 #: ../src/menu.c:80
 msgid "/Edit/_Undo"
-msgstr "/Szerkesztés/_Visszavon"
+msgstr "/Szerkesztés/_Visszavonás"
 
 #: ../src/menu.c:82
 msgid "/Edit/_Redo"
@@ -97,19 +98,19 @@ msgstr "/Szerkesztés/Új_ra"
 
 #: ../src/menu.c:86
 msgid "/Edit/Cu_t"
-msgstr "/Szerkesztés/_Kivág"
+msgstr "/Szerkesztés/_Kivágás"
 
 #: ../src/menu.c:88
 msgid "/Edit/_Copy"
-msgstr "/Szerkesztés/_Másol"
+msgstr "/Szerkesztés/_Másolás"
 
 #: ../src/menu.c:90
 msgid "/Edit/_Paste"
-msgstr "/Szerkesztés/_Beilleszt"
+msgstr "/Szerkesztés/_Beillesztés"
 
 #: ../src/menu.c:92
 msgid "/Edit/_Delete"
-msgstr "/Szerkesztés/_Töröl"
+msgstr "/Szerkesztés/_Törlés"
 
 #: ../src/menu.c:96
 msgid "/Edit/Select _All"
@@ -121,15 +122,15 @@ msgstr "/_Keresés"
 
 #: ../src/menu.c:100
 msgid "/Search/_Find..."
-msgstr "/Keresés/_Találd meg..."
+msgstr "/Keresés/_Keresés..."
 
 #: ../src/menu.c:102
 msgid "/Search/Find _Next"
-msgstr "/Keresés/_Következő keresése"
+msgstr "/Keresés/Kö_vetkező találat"
 
 #: ../src/menu.c:104
 msgid "/Search/Find _Previous"
-msgstr "/Keresés/_Előző keresése"
+msgstr "/Keresés/_Előző találat"
 
 #: ../src/menu.c:106
 msgid "/Search/_Replace..."
@@ -145,15 +146,15 @@ msgstr "/_Beállítások"
 
 #: ../src/menu.c:114
 msgid "/Options/_Font..."
-msgstr "/Beállítások/_Betű..."
+msgstr "/Beállítások/_Betűtípus..."
 
 #: ../src/menu.c:116
 msgid "/Options/_Word Wrap"
-msgstr "/Beállítások/Tördelés"
+msgstr "/Beállítások/Sorok _tördelése"
 
 #: ../src/menu.c:118
 msgid "/Options/_Line Numbers"
-msgstr "/Beállítások/_Sorszámok"
+msgstr "/Beállítások/Sorok _számozása"
 
 #: ../src/menu.c:122
 msgid "/Options/_Auto Indent"
@@ -173,26 +174,26 @@ msgstr "A keresett szöveg nem található"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "Cseréljük?"
+msgstr "Kicseréled?"
 
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d szövegrészletet cseréltünk"
+msgstr "%d csere volt"
 
 #: ../src/search.c:188
 msgid "Find"
-msgstr "Keres"
+msgstr "Keresés"
 
 #: ../src/search.c:200
 #: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "_Amit keres: "
+msgstr "_Keresett szöveg: "
 
 #: ../src/search.c:219
 #: ../src/search.c:292
 msgid "_Match case"
-msgstr "_Kis/nagybetű számít"
+msgstr "Kis- és _nagybetű számít"
 
 #: ../src/search.c:253
 msgid "Replace"
@@ -200,15 +201,15 @@ msgstr "Csere"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "_Csere erre: "
+msgstr "C_sere erre: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "Mindent _egyszerre kicserél"
+msgstr "Az összes találat cseréje _egyszerre"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "Ugrás Ide"
+msgstr "Ugrás"
 
 #: ../src/search.c:347
 msgid "_Jump"
@@ -216,29 +217,30 @@ msgstr "_Ugrás"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "S_orszám: "
+msgstr "S_or száma: "
 
+# XXX [mayday]: Miért locale, ha valójában encoding/codeset?
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Jelenlegi locale (%s)"
+msgstr "Jelenlegi kódolás (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "Más kódkészlet"
+msgstr "Más kódolás"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "Kódké_szlet:"
+msgstr "Kódolá_s:"
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "'%s' nem támogatott"
+msgstr "\"%s\" nem támogatott"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
-msgstr "Automatikus Felismerés"
+msgstr "Automatikus felismerés"
 
 #: ../src/selector.c:325
 msgid "Open"
@@ -250,12 +252,12 @@ msgstr "Mentés másként"
 
 #: ../src/selector.c:345
 msgid "Ch_aracter Coding: "
-msgstr "K_arakter kódolás: "
+msgstr "K_arakterkódolás: "
 
 #: ../src/selector.c:401
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' már létezik. Felülírod?"
+msgstr "\"%s\" már létezik. Felülírod?"
 
 #: ../src/window.c:141
 msgid "Untitled"
@@ -267,7 +269,7 @@ msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr "Egyszerű szöveg szerkesztő"
+msgstr "Egyszerű szövegszerkesztő"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
