--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-29  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Greek translation update.
+	* LINGUAS: Added `el'.
+	
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
 	* pl.po: Updated Polish translations by Piotr Malinski
