--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,12 +1,13 @@
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
+	* LINGUAS: Added a last missing language code.
 	* LINGUAS: Added missing language codes.
 
 2006-04-29  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
 	* LINGUAS: Added `el'.
-	
+
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
 	* ko.po: Updated.
